--- a/CC.ComputerVision/CC.AzureVision.REST-API/CC.AzureVision.REST-API.csproj
+++ b/CC.ComputerVision/CC.AzureVision.REST-API/CC.AzureVision.REST-API.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>CC.AzureVision.REST_API</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+  </ItemGroup>
+
 
 </Project>
