--- a/CC.ComputerVision/CC.AzureVision.REST-API/CC.AzureVision.REST-API.csproj
+++ b/CC.ComputerVision/CC.AzureVision.REST-API/CC.AzureVision.REST-API.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
   </ItemGroup>
 
 
