--- a/CC.ComputerVision/CC.AzureVision.REST-API/CC.AzureVision.REST-API.csproj
+++ b/CC.ComputerVision/CC.AzureVision.REST-API/CC.AzureVision.REST-API.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" Version="6.0.0" />
+    <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.14.0" />
   </ItemGroup>
 
 
