--- a/CC.ComputerVision/CC.AzureVision.REST-API/Properties/launchSettings.json
+++ b/CC.ComputerVision/CC.AzureVision.REST-API/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:59089",
-      "sslPort": 44336
+      "applicationUrl": "http://localhost:59089"
     }
   },
   "profiles": {
