--- a/CC.ComputerVision/CC.AzureVision.REST-API/Properties/launchSettings.json
+++ b/CC.ComputerVision/CC.AzureVision.REST-API/Properties/launchSettings.json
@@ -17,13 +17,13 @@
       }
     },
     "CC.AzureVision.REST_API": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "AzureVision",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "Project",
+        "launchBrowser": true,
+        "launchUrl": "AzureVision",
+        "applicationUrl": "http://localhost:59089",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        }
     }
   }
 }
